yip to UNITED STATES FROM CANADA WORKS"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">yipAndroid3</string>
+    <string name="compass_descript">Compass Pointer</string>
 </resources>
