--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">yipAndroid3</string>
     <string name="compass_descript">Compass Pointer</string>
     <string name="AddressSearch">Search an Address</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="place_details" />
+    <string name="label_search">Search</string>
+    <string name="label_multiple_numbers">Multiple numbers</string>
 </resources>
