progress on branch and uri scheme -- significant testing and interaction needed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="AddressSearch">Search an Address</string>
     <string name="label_search">Search</string>
     <string name="label_multiple_numbers">Multiple numbers</string>
+    <string name="uri_host">comexamplejosephyipandroid3.com</string>
+    <string name="uri_scheme">http</string>
 </resources>
