stable for now -- deeplinking to CompassActivity in progress and testing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="AddressSearch">Search an Address</string>
     <string name="label_search">Search</string>
     <string name="label_multiple_numbers">Multiple numbers</string>
-    <string name="uri_host">comexamplejosephyipandroid3.com</string>
+    <string name="uri_host">yipAndroid3.com</string>
     <string name="uri_scheme">http</string>
+    <string name="uri_scheme_secure">https</string>
+    <string name="fallback_url">http://josephzhong.me</string>
 </resources>
